# GoIt_Web_HW13_P1

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/: schemas.py
src/database/: db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
